--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -17,7 +17,7 @@
   <view class="a-section a-brand">
     <view class="h">
       <navigator url="../brand/brand">
-        <text class="txt">品牌制造商直供</text>
+        <text class="txt">小凉帽直供</text>
       </navigator>
     </view>
     <view class="b">
