--- a/pages/goods/goods.wxml
+++ b/pages/goods/goods.wxml
@@ -113,7 +113,7 @@
   </view>
   <view wx:if="{{openAttr}}" class="attr-pop">
     <view class="img-info">
-      <image class="img" src="http://ac-3yr0g9cz.clouddn.com/6e5176bd6545b72e130a.png"></image>
+      <image class="img" src="{{goods.list_pic_url}}"></image>
       <view class="info">
         <view class="c">
           <view class="p">价格：￥{{goods.retail_price}}</view>
@@ -150,7 +150,8 @@
 
       </view>
     </view>
-    <view class="c">立即购买</view>
-    <view class="r" bindtap="addToCart">加入购物车</view>
+    <view class="c" wx:if="{{!openAttr}}">立即购买</view>
+    <view class="r" wx:if="{{!openAttr}}" bindtap="addToCart">加入购物车</view>
+    <view class="r" wx:if="{{openAttr}}" bindtap="addToCart">确定</view>
   </view>
 </scroll-view>
