--- a/pages/ucenter/order/order.wxml
+++ b/pages/ucenter/order/order.wxml
@@ -3,7 +3,8 @@
         <navigator url="../orderDetail/orderDetail?id={{item.id}}" class="order" wx:for="{{orderList}}" wx:key="{{item.id}}">
             <view class="h">
                 <view class="l">订单编号：{{item.order_sn}}</view>
-                <view class="r">{{item.order_status_text}}</view>
+                <view class="r" wx:if="{{item.order_status<2}}">{{item.order_status_text}}</view>
+                <view class="r ok" wx:if="{{item.order_status>=2}}">{{item.order_status_text}}</view>
             </view>
             <view class="goods" wx:for="{{item.goodsList}}" wx:key="{{gitem.id}}" wx:for-item="gitem">
                 <view class="img">
