--- a/pages/ucenter/order/order.wxss
+++ b/pages/ucenter/order/order.wxss
@@ -34,6 +34,11 @@ page{
     color: #b4282d;
     font-size: 24rpx;
 }
+.order .h .r.ok{
+    float: right;
+    color: green;
+    font-size: 24rpx;
+}
 
 .order .goods{
     display: flex;
