实现立刻购买的功能；规格数量选择窗口增加返回按钮；优惠券页面的兑换号清除功能，以及去掉演示内容

--- a/pages/ucenter/coupon/coupon.wxml
+++ b/pages/ucenter/coupon/coupon.wxml
@@ -1,12 +1,12 @@
 <view class="container">
   <view class="coupon-form">
     <view class="input-box">
-      <input class="coupon-sn" placeholder="请输入优惠码" />
-      <image class="clear-icon" src="http://yanxuan.nosdn.127.net/hxm/yanxuan-wap/p/20161201/style/img/icon-normal/clear-fb-dd9d604f86.png"></image>
+      <input class="coupon-sn" placeholder="请输入优惠码" value="{{exchangeCode}}" />
+      <image class="clear-icon" src="http://yanxuan.nosdn.127.net/hxm/yanxuan-wap/p/20161201/style/img/icon-normal/clear-fb-dd9d604f86.png" bindtap="clearExchange"></image>
     </view>
     <button class="add-btn disabled">兑换</button>
   </view>
-  <view class="help">使用说明</view>
+  <!--<view class="help">使用说明</view>
   <view class="coupon-list">
     <view class="item">
       <view class="tag">新人专享</view>
@@ -41,7 +41,6 @@
         <image src="https://yanxuan.nosdn.127.net/hxm/yanxuan-wap/p/20161201/style/img/icon-normal/couponArrow-71315b4145.png" class="icon"></image>
       </view>
     </view>
-  </view>
-
+  </view>-->
 
 </view>
