--- a/pages/goods/goods.wxml
+++ b/pages/goods/goods.wxml
@@ -16,7 +16,7 @@
         <text class="desc">{{goods.goods_brief}}</text>
         <text class="price">￥{{goods.retail_price}}</text>
         <view class="brand" wx:if="{{brand.name}}">
-          <navigator url="../brandDetail/brandDetail?id={{brand.brandId}}">
+          <navigator url="../brandDetail/brandDetail?id={{brand.id}}">
             <text>{{brand.name}}</text>
           </navigator>
         </view>
@@ -138,20 +138,20 @@
         </view>
       </view>
     </view>
-    <view class="addToCart" bindtap="addToCart">确定</view>
+    <view class="addToCart" bindtap="addToCart">确 定</view>
+    <view class="closeSpec" bindtap="closeSpec">取 消</view>
   </view>
   <view class="bottom-btn" wx:if="{{!openAttr}}">
     <view class="l l-collect {{ openAttr ? 'back' : ''}}" bindtap="closeAttrOrCollect">
       <image class="icon" src="{{ collectBackImage }}"></image>
     </view>
-    <view class="l l-cart">
+    <view class="l l-cart" bindtap="openCartPage" >
       <view class="box">
         <text class="cart-count">{{cartGoodsCount}}</text>
-        <image bindtap="openCartPage" class="icon" src="/static/images/ic_menu_shoping_nor.png"></image>
-
+        <image class="icon" src="/static/images/ic_menu_shoping_nor.png"></image>
       </view>
     </view>
-    <view class="c">立即购买</view>
+    <view class="c" bindtap="switchAttrPop">立即购买</view>
     <view class="r" bindtap="addToCart">加入购物车</view>
   </view>
 </scroll-view>
