--- a/pages/goods/goods.wxss
+++ b/pages/goods/goods.wxss
@@ -719,3 +719,14 @@
     color: #fff;
     margin-top: 200rpx;
 }
+
+.closeSpec {
+  border:1px solid #999999;
+    background: #f9f9f9;
+    height: 100rpx;
+    line-height: 96rpx;
+    width: 100%;
+    text-align: center;
+    color: #333;
+    margin-top: 20rpx;
+}
